RESOLVED FIXED 105039
[GTK][AC] Fix assertion failures for AC with clutter
https://bugs.webkit.org/show_bug.cgi?id=105039
Summary [GTK][AC] Fix assertion failures for AC with clutter
ChangSeok Oh
Reported 2012-12-14 09:59:46 PST
I found two assertion failures while running AC(clutter backend) test page in debug build.
Attachments
Patch (2.74 KB, patch)
2012-12-14 10:22 PST, ChangSeok Oh
no flags
Patch (2.75 KB, patch)
2012-12-17 07:19 PST, ChangSeok Oh
no flags
Patch (2.80 KB, patch)
2012-12-18 08:15 PST, ChangSeok Oh
no flags
ChangSeok Oh
Comment 1 2012-12-14 10:22:55 PST
WebKit Review Bot
Comment 2 2012-12-14 11:17:08 PST
Comment on attachment 179496 [details] Patch Attachment 179496 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15313771 New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html
Build Bot
Comment 3 2012-12-14 12:10:35 PST
Comment on attachment 179496 [details] Patch Attachment 179496 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/15309778 New failing tests: fast/frames/sandboxed-iframe-attribute-parsing.html
ChangSeok Oh
Comment 4 2012-12-17 07:19:56 PST
Gustavo Noronha (kov)
Comment 5 2012-12-17 11:10:39 PST
Comment on attachment 179737 [details] Patch Makes sense, but can you add notImplemented() calls for the AcceleratedCompositingContext methods you removed the asserts from?
ChangSeok Oh
Comment 6 2012-12-18 08:15:24 PST
WebKit Review Bot
Comment 7 2012-12-18 18:33:37 PST
Comment on attachment 179945 [details] Patch Clearing flags on attachment: 179945 Committed r138100: <http://trac.webkit.org/changeset/138100>
WebKit Review Bot
Comment 8 2012-12-18 18:33:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.