[GTK][AC] Fix assertion failures for AC with clutter https://bugs.webkit.org/show_bug.cgi?id=105039

Patch by ChangSeok Oh <shivamidow@gmail.com> on 2012-12-18
Reviewed by Gustavo Noronha Silva.

AcceleratedCompositingContext could be a client of GraphicsLayerClutter
not only RenderLayerBacking. So inserting ASSERT_NOT_REACH in notifyFlushRequired()
causes a crash by calling GraphicsLayerClutter::noteLayerPropertyChanged in debug build.
And also I added flushCompositingStateIncludingSubframes taken from
AcceleratedCompositingContextGL to flushAndRenderLayers(). If not so,
ASSERT(!needsLayout()) failed in FrameView::paintContents() too in debug build.

* WebCoreSupport/AcceleratedCompositingContextClutter.cpp:
(WebKit::AcceleratedCompositingContext::flushAndRenderLayers): Add updateLayoutAndStyleIfNeededRecursive()
(WebKit::AcceleratedCompositingContext::notifyAnimationStarted): Removed ASSERT_NOT_REACHED()
(WebKit::AcceleratedCompositingContext::notifyFlushRequired): Removed ASSERT_NOT_REACHED()

Canonical link: https://commits.webkit.org/123603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138100 268f45cc-cd09-0410-ab3c-d52691b4dbfc